--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+annotated-types==0.7.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 colorama==0.4.6
 decorator==4.4.2
 defusedxml==0.7.1
-fonttools==4.54.1
+fonttools==4.55.0
 fpdf2==2.8.1
 idna==3.10
 imageio==2.36.0
@@ -12,7 +13,10 @@ moviepy==1.0.3
 numpy==2.1.3
 pillow==11.0.0
 proglog==0.1.10
+pydantic==2.9.2
+pydantic_core==2.23.4
 requests==2.32.3
-setuptools==75.4.0
+setuptools==75.5.0
 tqdm==4.67.0
+typing_extensions==4.12.2
 urllib3==2.2.3
